--- a/date/2024-02/page-2.htm
+++ b/date/2024-02/page-2.htm
@@ -200,8 +200,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-6-25-node-share.htm">6月25日更新22M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、美国、欧洲、日本、新加坡、韩国、加拿大等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-25-node-share.htm">8月25日更新20.2M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、日本、欧洲、新加坡、韩国、美国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -210,8 +210,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-5-node-share-links.htm">4月5日更新20.1M/S，2024年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、美国、欧洲、加拿大、日本、韩国等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-19-clash-v2ray-ss-ssr.htm">8月19日更新21.7M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、美国、香港、新加坡、韩国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -220,8 +220,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-23-free-ssr-node.htm">10月23日更新21.8M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、欧洲、新加坡、香港、加拿大、日本等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-30-free-node-subscribe.htm">9月30日更新21.6M/S，2024年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、欧洲、日本、香港、美国、加拿大、新加坡等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -230,8 +230,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-31-free-clash.htm">5月31日更新22.9M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、欧洲、香港、日本、美国、加拿大、韩国等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-7-31-clash-v2ray-ss-ssr.htm">7月31日更新19.3M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、加拿大、香港、新加坡、日本、美国等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -240,8 +240,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-14-free-node-subscribe-links.htm">4月14日更新19.5M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了美国、韩国、新加坡、日本、加拿大、香港、欧洲等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-11-free-subscribe-node.htm">10月11日更新21.6M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、美国、日本、新加坡、欧洲、韩国等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -250,8 +250,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-9-clash-windows.htm">4月9日更新22.7M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、香港、加拿大、新加坡、韩国、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-17-clash-node-daily-updates.htm">10月17日更新21.5M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、香港、韩国、美国、新加坡等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -260,8 +260,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-21-free-ssr-node.htm">9月21日更新18.7M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、韩国、日本、加拿大、欧洲、香港、美国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-31-free-high-speed-nodes.htm">8月31日更新22.1M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、日本、新加坡、香港、加拿大、欧洲等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -270,8 +270,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-1-clash-windows.htm">8月1日更新18.1M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、新加坡、欧洲、加拿大、韩国、美国等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-7-17-free-v2ray.htm">7月17日更新19.8M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、日本、欧洲、加拿大、美国、新加坡、香港等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -280,8 +280,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-29-node-share.htm">4月29日更新22.5M/S，2024年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、新加坡、加拿大、欧洲、香港、日本等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-24-clash-node.htm">2月24日22.3M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、新加坡、美国、欧洲、香港、韩国等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -290,8 +290,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-13-node-share-links.htm">8月13日更新19M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、香港、美国、新加坡、韩国、欧洲等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-22-free-ssr-subscribe.htm">5月22日更新21.5M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、欧洲、日本、加拿大、香港、韩国、美国等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -302,7 +302,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
